# hokkaido

./: Cargo.toml  README.md  flake.nix
src/: lib.rs
src/furamengo/: mod.rs
src/gojo/: cli.rs  mod.rs  parser.rs
src/konan/: cli.rs  mod.rs  parser.rs
tests/: mod.rs
tests/gojo_integration_tests/: mod.rs
tests/gojo_integration_tests/inputs/: 01.txt  02.txt
tests/gojo_integration_tests/output/: 01.test.txt
